[project]
name = "tokyo-market-intelligence-map"
version = "0.1.0"
description = "Public-data BI / Market Intelligence portfolio project for Tokyo commercial opportunity scoring."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]
geo = [
  "geopandas>=1.0.0",
  "h3>=3.7.0",
  "shapely>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
